syntax = "proto3";

package api.gen;

option go_package = "api/gen/v1";
import "google/api/annotations.proto";
import "github.com/envoyproxy/protoc-gen-validate@v0.6.7/validate/validate.proto";
import "common.proto";

service ServerB {
  rpc CallB (CallBReq) returns (CallBResp) {
    option (google.api.http) = {
      post: "/v1/CallB"
      body: "*"
    };    
  }
}

message CallBReq {
  string Param=1;
}

message CallBResp {
  string Param=1;  
}